# lecturematerial-semantics

./: README.md  environment.yml  environment_raspberry.yml  pyproject.toml
eah_segmentation/: README.md  __init__.py  ade20k_utils.py  class_mapping.py  convert_keras_to_coral.py  download_dataset.py  download_models.py  environment.yml  evaluate.py  inference.py  metrics.py  model_config.py  model_inference.py  pyproject.toml  run_segmentation.py  run_segmentation_models.py  utils.py  visualization.py
eah_segmentation/eah_segmentation/: ade20k_utils.py  color_utils.py  download_dataset.py  download_models.py  model_inference.py  run_segmentation_models.py  test_models.py
eah_segmentation/notebooks/: presentation_demo.ipynb
notebooks/: presentation_demo.ipynb  segmentation_example.ipynb
scripts/: install_raspberry.sh
