[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eah_segmentation"
version = "0.1.0"
authors = [
    { name="Jürgen Hess", email="juergenmhess@gmail.com" }
]
description = "A demonstration of semantic segmentation with multiple models using TensorFlow."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    # Model and data handling
    "kagglehub",
    "transformers",
    "keras-cv",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    # Development environment
    "jupyter",
    "matplotlib",
    "paramiko",
    "ipython",
    
    # Testing and code quality
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/juehess/eah_segmentation"

[project.scripts]
# Exposes a command "eah-seg-run" -> calls main() in run_segmentation_models.py
eah-seg-run = "eah_segmentation.run_segmentation_models:main"

[tool.setuptools]
packages = ["eah_segmentation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=eah_segmentation"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
