[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eah_segmentation"
version = "0.1.0"
description = "A demonstration of semantic segmentation with multiple models using TensorFlow."
readme = "README.md"
authors = [
    { name="Your Name", email="you@example.com" }
]
keywords = ["image-processing", "semantic-segmentation", "tensorflow"]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "opencv-python",
    "tensorflow>=2.8.0",
    "tensorflow-hub>=0.12.0",
    "openmim>=0.3.9",
    "mmengine>=0.7.0",
    "mmcv>=2.0.0",
    "mmsegmentation>=1.2.1"
]

# If you have optional or extra dependencies:
# [project.optional-dependencies]
# dev = ["pytest>=7.0", "flake8"]

[project.urls]
"Homepage" = "https://github.com/yourusername/eah_segmentation"

[project.scripts]
# Exposes a command "eah-seg-run" -> calls main() in run_segmentation_models.py
eah-seg-run = "eah_segmentation.run_segmentation_models:main"
